--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <p style="margin-top: 45px">Code &emsp;&emsp;Followers&emsp;&emsp;Skills</p>
 
-        <div class="follow-me"><a href="https://www.sololearn.com/Profile/5371585/?ref=app">Follow Me</a></div>
+        <div class="Contact Me"><a href="https://telegram.me/its_pranav_xd">Contact me</a></div>
 
     </div>
 
