--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <div class="circle">
 
-            <img id="dp" src="https://www.sololearn.com/avatars/402fd2dd-d6ce-40de-a4ea-a48d831a6307.jpg"/>
+            <img id="dp" src="https://telegra.ph/file/495c37ea86d6e1a30fa87.jpg"/>
 
         </div>
 
@@ -193,9 +193,9 @@
 
         <i class="fa fa-github" style="font-size:30px; -webkit-transition: 0.5s ease-in-out;" onmouseover="social(this,1);" onmouseout="social(this,0)"></i>
 
-        <i class="fa fa-instagram" style="font-size:30px;margin-left: 30px; -webkit-transition: 0.5s ease-in-out;" onmouseover="social(this,1);" onmouseout="social(this,0)"></i>
+        <i class="fa fa-Telegram" style="font-size:30px;margin-left: 30px; -webkit-transition: 0.5s ease-in-out;" onmouseover="social(this,1);" onmouseout="social(this,0)"></i>
 
-        <i class="fa fa-twitter" style="font-size:30px;margin-left: 30px; -webkit-transition: 0.5s ease-in-out;" onmouseover="social(this,1);" onmouseout="social(this,0)"></i>
+        <i class="fa fa-Goggle" style="font-size:30px;margin-left: 30px; -webkit-transition: 0.5s ease-in-out;" onmouseover="social(this,1);" onmouseout="social(this,0)"></i>
 
         <span class="sp1">03</span><span class="sp2">125</span><span class="sp3">02</span>
 
